<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings" >

     <include
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        layout="@layout/actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_home"
        android:gravity="center"
        android:orientation="vertical"  >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/line_separator" />

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="vertical" >

	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/mode"
	                android:textAppearance="@style/GreenText" />

	            <RadioGroup
	                android:id="@+id/mode"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" >

	                <RadioButton
	                    android:id="@+id/mode1"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:checked="true"
	                    android:text="@string/mode1" />

	                <RadioButton
	                    android:id="@+id/mode2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/mode2" />
	            </RadioGroup>
	        </LinearLayout>

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/line_separator" />

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="vertical"
	            android:paddingBottom="15dp"
	            android:paddingLeft="10dp" >

	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/volume"
	                android:textAppearance="@style/GreenText" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:orientation="horizontal"
	                android:paddingLeft="10dp" >

	                <SeekBar
	                    android:id="@+id/Volume"
	                    android:layout_width="245dp"
	                    android:layout_height="wrap_content" />

	                <TextView
	                    android:id="@+id/pourcentageVol"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/pourcentageVol"
	                    android:textAppearance="@style/GreenText" />
	            </LinearLayout>
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="vertical"
	            android:paddingBottom="15dp"
	            android:paddingLeft="10dp" >

	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/ecl"
	                android:textAppearance="@style/GreenText" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:orientation="horizontal"
	                android:paddingLeft="10dp" >

	                <SeekBar
	                    android:id="@+id/light"
	                    android:layout_width="245dp"
	                    android:layout_height="wrap_content" />

	                <TextView
	                    android:id="@+id/pourcentageEc"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/pourcentageEc"
	                    android:textAppearance="@style/GreenText" />
	            </LinearLayout>
	        </LinearLayout>

	        <ImageView
	            android:id="@+id/imageView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/line_separator" />

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:orientation="vertical" >

	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/son"
	               android:textAppearance="@style/GreenText" />

	            <Spinner
	                android:id="@+id/sound"
	                android:layout_width="300dp"
	                android:layout_height="match_parent"
	                android:entries="@array/sounds" />
	        </LinearLayout>

	        <ImageView
	            android:id="@+id/ImageView01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/line_separator" />

	        <Button
	            android:id="@+id/save"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/save" />

	    </LinearLayout>
	</ScrollView>

</RelativeLayout>