<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ItsTime" >

    <include
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_home"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/itstime"
            android:textAppearance="@style/GreenText" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/time"
            android:textAppearance="@style/GreenText" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_weight="0.00"
            android:src="@drawable/math" />

        <TextView
            android:id="@+id/messageMath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/turnoffMath"
            android:textAppearance="@style/GreenText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/MathOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MathOp"
                android:textAppearance="@style/GreenText" />

            <EditText
                android:id="@+id/res"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/ok"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK" />
            
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>